fix document spacing in column

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -3,9 +3,12 @@
 body {
   background-image: url(/img/texture/grey.png);
 }
-.navbar {
+.jumbotron, .navbar {
   background-image: url(/img/texture/black.png);
   box-shadow: 0px 9px 34px -12px rgba(0,0,0,0.75);
+}
+.navbar {
+  height: 56px;
 }
 .navbar-brand {
   font-family: 'sarina', cursive;
@@ -23,8 +26,15 @@ p, a, h1, h2, h3, h4, span, input::-webkit-input-placeholder {
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 }
+.loader {
+  text-align: center;
+}
+.throbber-loader {
+  margin: 0 auto;
+}
 .alert-danger {
   background-image: url(/img/texture/light.png);
+  text-align: center;
 }
 .thumbnail {
   background-image: url(/img/texture/blue.png);
@@ -67,6 +77,28 @@ p, a, h1, h2, h3, h4, span, input::-webkit-input-placeholder {
   float: right;
   border: 1px solid #000;
 }
+input.transparent-input {
+  font-size: 2.5em;
+  color: #FFF;
+  background-color:rgba(0,0,0,0.0) !important;
+  border:none !important;
+  border-bottom: 2px solid #FFF !important;
+  border-radius: 0 !important;
+  outline: none !important;
+}
+.transparent-input[type="text"]:focus {
+  border:none;
+  box-shadow: none;
+  -webkit-transition: none;
+  -webkit-box-shadow: none;
+     -moz-box-shadow: none;
+     -moz-transition: none;
+}
+.form-control::-webkit-input-placeholder { font-style: italic; color: white; }
+.form-control:-moz-placeholder { font-style: italic; color: white; }
+.form-control::-moz-placeholder { font-style: italic; color: white; }
+.form-control:-ms-input-placeholder { font-style: italic; color: white; }
+
 @media screen and (min-width: 1200px) {
   .alert {
     margin-top: 1.5em;
